// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color picker with a color passed in 1`] = `
<div>
  {"color":"#000","disableAlpha":true}
</div>
`;

exports[`Default edit color picker render 1`] = `
<div>
  {"color":"#fff","disableAlpha":true}
</div>
`;
